--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,21 +1,24 @@
-<html>
-    <head>
-        <title>Django Bookmarks -User Login</title>
-    </head>
-    <body>
-        <h1>User Login</h1>
-        {% if form.has_errors %}
-        <p>Your username and password didn't match.
-            Please try again.</p>
-        {% endif %}
-        <form method="post" action=".">
-            {% csrf_token %}
-            <p><label for="id_username"> Username:</label>
-            {{ form.username }}</p>
-            <p><label for="id_password"> password:</label>
-                {{ form.password }}</p>
-            <input type="hidden" name="next" value="/bookmarks" />
-            <input type="submit" value="login" />    
-        </form>   
-    </body>
-</html>
+{% extends "base.html" %}
+{% block title %}
+    User Login
+{% endblock %}  
+
+{% block head %}
+    User Login
+{% endblock %}
+
+{% block content %}
+    {% if form.has_errors %}
+    <p>Your username and password didn't match.
+        Please try again.</p>
+    {% endif %}
+    <form method="post" action=".">
+        {% csrf_token %}
+        <p><label for="id_username"> Username:</label>
+        {{ form.username }}</p>
+        <p><label for="id_password"> password:</label>
+            {{ form.password }}</p>
+        <input type="hidden" name="next" value="/bookmarks" />
+        <input type="submit" value="login" />    
+    </form>   
+ {% endblock %}
