--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,7 @@
        (<a href="logout/">logout</a>)
      {% else %}
        <a href="login/">login</a>
+       <a href="register/">register</a>
      {% endif %}     
     </div>
    <h1>{% block head %}{% endblock %}</h1> 
