--- a/templates/registration/register_success.html
+++ b/templates/registration/register_success.html
@@ -11,5 +11,5 @@
     Thank you for registering. Your information has been
     saved in the database, Now you can either
     <a href="login/">login</a> or go back to the
-    <a href="/bookmarks">main page</a>.
+    <a href="/">main page</a>.
 {% endblock %}
