--- a/templates/base.html
+++ b/templates/base.html
@@ -10,16 +10,22 @@
 </head>
 <body>
     <div id="nav">
-     <a href="/bookmarks">home</a>
+     <a href="/">home</a>
      {% if user.is_authenticated %}
-       welcome {{ user.username }}
+      <a href="save/">submit</a>>
+      <a href="user/{{ user.username }}/">
+        {{ user.username }}</a>
        (<a href="logout/">logout</a>)
      {% else %}
        <a href="login/">login</a>
        <a href="register/">register</a>
      {% endif %}     
     </div>
-   <h1>{% block head %}{% endblock %}</h1> 
-   {% block content %}{% endblock %}
+   <h1>
+    {% block head %}
+    {% endblock %}
+  </h1> 
+    {% block content %}
+    {% endblock %}
 </body>
 </html>
