--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -8,14 +8,5 @@
 {% endblock %}   
 
 {% block content %}
-    {% if bookmarks %}
-        <ul>
-        {% for bookmark in bookmarks %}
-        <li><a href="{{ bookmark.link.url }}">
-            {{ bookmark.title }}</a></li>
-        {% endfor %}      
-        </ul>
-    {% else %}
-         <p>No bookmarks found.</p>
-    {% endif %} 
+    {% include "bookmark_list.html" %}
 {% endblock %}     
