--- a/templates/bookmark_list.html
+++ b/templates/bookmark_list.html
@@ -10,9 +10,10 @@
         {% if bookmark.tag_set.all %}
      <ul class="tags">
     {% for tag in bookmark.tag_set.all %} 
-    <li>{{ tag.name }}</li> 
+      <li>
+         <a href="/tag/{{ tag.name }}">{{ tag.name }}</a>
+      </li> 
     {% endfor %}
-
     </ul>
         {% else %}
          None.
