--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,18 @@
 body{
-    background-color: violet;
+    background-color: wheat; 
 }
+
+/* #third{
+    background-image: url("/static/pop2.jpg") 50% 0 no-repeat fixed;
+    color: white;
+    height: 650px;
+    padding: 100px 0 0 0;   
+    } */
+
 
 #nav {
     float: right;
+
 }
 
 input {
