--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -18,8 +18,8 @@
         {{ form.username }}</p>
         <p><label for="id_password"> password:</label>
             {{ form.password }}</p>
-        <input type="hidden" name="next" value="/" />
-        <input name="continue" type="submit" value="/login" />    
+        <input type="hidden" name="next" value="" />
+        <input name="continue" type="submit" value="login" />    
     </form>   
     <!-- {% if next %}
     {% if user.is_authenticated %}
