--- a/templates/base.html
+++ b/templates/base.html
@@ -5,16 +5,19 @@
 <head>
     <title>Django Bookmarks |
          {% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="static/style.css"
-        type="text/css" />   
+    <link rel="stylesheet" href="/static/style.css"
+        type="text/css" /> 
+
         <script type="text/javascript"
-        src="static/jquery.js"></script>  
+        src="/static/jquery.js"></script>  
+        {% block external %} {% endblock %}
 </head>
 <body>
     <div id="nav">
      <a href="/">home</a>
      {% if user.is_authenticated %}
-      <a href="save/">submit</a>>
+      <a href="save/">submit</a>
+      <a href="/search/">search</a>
       <a href="user/{{ user.username }}/">
         {{ user.username }}</a>
        (<a href="logout/">logout</a>)
