--- a/templates/bookmark_save.html
+++ b/templates/bookmark_save.html
@@ -10,5 +10,5 @@
 
 {% block content %}
     <form method="post" action="."> {{ form.as_p }}
-    <input type="submit" value="save" /> </form>
+    <input type="submit" value="Save" /> </form>
 {% endblock %}
