--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -19,7 +19,7 @@
     </p>
     {% else %}
     <p>Welcome anonymous user!
-        You need  to <a href="login/">Login</a>
+        You need  to <a href="/login/">Login</a>
         before you can store and share bookmarks.
     </p>
     {% endif %}
