--- a/templates/registration/register.html
+++ b/templates/registration/register.html
@@ -12,7 +12,7 @@
     
   
 {% block content %}
-<form method="post" action=".">
+<form method="post" action="." class="loginform cf">
     {% csrf_token %}
     {{ form.as_p }}
     <input type="submit" value="register"/>
