--- a/templates/base.html
+++ b/templates/base.html
@@ -16,14 +16,14 @@
     <div id="nav">
      <a href="/">home</a>
      {% if user.is_authenticated %}
-      <a href="save/">submit</a>
+      <a href="/save/">submit</a>
       <a href="/search/">search</a>
-      <a href="user/{{ user.username }}/">
+      <a href="/user/{{ user.username }}/">
         {{ user.username }}</a>
-       (<a href="logout/">logout</a>)
+       (<a href="/logout/">logout</a>)
      {% else %}
-       <a href="login/">login</a>
-       <a href="register/">register</a>
+       <a href="/login/">login</a>
+       <a href="/register/">register</a>
      {% endif %}     
     </div>
    <h1>
