--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -8,12 +8,13 @@
 {% endblock %}
 
 {% block content %}
-    {% if form.has_errors %}
+    
+    <form method="post" action=".">
+        {% csrf_token %}
+        {% if form.errors %}
     <p>Your username and password didn't match.
         Please try again.</p>
     {% endif %}
-    <form method="post" action=".">
-        {% csrf_token %}
        
         <p><label for="id_username"> Username:</label>
         {{ form.username }}</p>
