--- a/templates/bookmark_save.html
+++ b/templates/bookmark_save.html
@@ -9,6 +9,5 @@
 {% endblock %} 
 
 {% block content %}
-    <form method="post" action="."> {{ form.as_p }}
-    <input type="submit" value="Save" /> </form>
+    {% include 'bookmark_save_form.html' %}
 {% endblock %}
