--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -1,4 +1,9 @@
 {% extends "base.html" %}
+
+{% block external %}
+    <script type="text/javascript" src="/static/bookmark_edit.js">
+    </script>
+{% endblock %}
 {% block title %}
     {{ username }}
 {% endblock %} 
