--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -23,5 +23,7 @@
         before you can store and share bookmarks.
     </p>
     {% endif %}
+    <h2>Bookmarks Shared by Users</h2>
+    {% include 'shared_bookmark_list.html' %}
 {% endblock %}    
 
