--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,13 @@
     {% block head %}
     {% endblock %}
   </h1> 
+  {% if messages %}
+    <ul class="messages">
+      {% for message in messages %}
+        <li>{{ message }}</li>
+      {% endfor %}
+    </ul>
+    {% endif %}
     {% block content %}
     {% endblock %}
 </body>
