--- a/templates/friends_page.html
+++ b/templates/friends_page.html
@@ -20,6 +20,7 @@
  {% else %}
    <p>No friends found.</p>
  {% endif %}
+ <a href="/friend/invite/">Invite a friend!</a>
  <h2>Latest Friend Bookmarks</h2>
  {% include 'bookmark_list.html' %}
 
