--- a/templates/friend_invite.html
+++ b/templates/friend_invite.html
@@ -1,18 +1,20 @@
 {% extends "base.html" %}
 
+{% load i18n %}
+
 {% block title %}
-  Invite A Friend
+  {% trans 'Invite A Friend' %}
 {% endblock %}
 
 {% block head %}
-  Invite A Friend
+  {% trans 'Invite A Friend' %}
 {% endblock %}
 
 {% block content %}
-  Enter your friend name and email below,
-      and click "send invite" to invite your friend to join the site:
+  {% trans 'Enter your friend name and email below,
+      and click "send invite" to invite your friend to join the site:' %}
   <form method="post" action=".">
      {{ form.as_p }}
-     <input type="submit" value="send invite" />
+     <input type="submit" value="{% trans 'send invite' %}" />
   </form>
 {% endblock %}
