--- a/templates/friend_invite.html
+++ b/templates/friend_invite.html
@@ -11,8 +11,7 @@
 {% endblock %}
 
 {% block content %}
-  {% trans 'Enter your friend name and email below,
-      and click "send invite" to invite your friend to join the site:' %}
+  {% trans 'Enter your friend name and email below,and click "send invite" to invite your friend to join the site:' %}
   <form method="post" action=".">
      {{ form.as_p }}
      <input type="submit" value="{% trans 'send invite' %}" />
